chore: remove experimental warning for Windows (#72)
Windows support is no longer considered experimental, and may be used
in production. This removes the warning in the README.

It also adds a couple of badges & sets the package author.

Signed-off-by: Daniel Neilson <53624638+ddneilson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ build-backend = "hatchling.build"
 
 [project]
 name = "openjd-cli"
+authors = [
+  {name = "Amazon Web Services"},
+]
 dynamic = ["version"]
 readme = "README.md"
 license = "Apache-2.0"
